--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,7 @@
-# built application files
-*.apk
-*.ap_
-
-# files for the dex VM
-*.dex
-
-# Java class files
 *.class
 
-# generated files
-bin/
-gen/
+# Package Files #
+*.jar
+*.war
+*.ear
 
-# Local configuration file (sdk path, etc)
-local.properties
-
-# Eclipse project files
-.classpath
-.project
-
-
-
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
